Part03/kubia-pod-named-port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
spec:
  containers:
  - name: kubia
    image: knix008/kubia
    ports:
    - name: http
      containerPort: 8080
    - name: https
      containerPort: 8443
