Part03/kubia-svc-headliess.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None
  #publishNotReadyAddresses: true
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
